# acetone

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  LICENSE-MIT  README.md  STABILITY.md  deny.toml  manifest
.beads/: config.yaml  interactions.jsonl  metadata.json
.beads/formulas/: release.formula.toml
.github/workflows/: ci.yml  docs.yml  homebrew-bump.yml  release.yml
benches/: Cargo.toml  README.md
benches/src/: lib.rs  main.rs
benches/tests/: smoke.rs
crates/acetone-cli/: Cargo.toml
crates/acetone-cli/src/: cli.rs  commands.rs  export.rs  import.rs  json.rs  main.rs  output.rs  query.rs  value.rs
crates/acetone-cli/tests/: cli.rs  co_tenant_cli.rs  discovery.rs  error_messages.rs  export.rs  help_snapshots.rs  import.rs  index.rs  params.rs  scheduled_import.rs  shell.rs  trojan_source.rs  zero_width.rs
crates/acetone-cli/tests/snapshots/: help_snapshots__failure_output.snap  help_snapshots__subcommand_help.snap  help_snapshots__top_level_help.snap
crates/acetone-core/: Cargo.toml  public-api.txt
crates/acetone-core/examples/: manual_library_api.rs
crates/acetone-core/src/: lib.rs
crates/acetone-cypher/: Cargo.toml  public-api.txt
crates/acetone-cypher/src/: ast.rs  error.rs  lex.rs  lib.rs  parser.rs  persist.rs  session.rs  span.rs  suggest.rs
crates/acetone-cypher/src/bind/: binder.rs  bound.rs  catalogue.rs  error.rs  mod.rs
crates/acetone-cypher/src/exec/: adapter.rs  eval.rs  functions.rs  governor.rs  mod.rs  run.rs  source.rs  store_source.rs  value.rs  write.rs
crates/acetone-cypher/tests/: corpus.rs  crash_hardening.rs  error_messages.rs  fuzz.rs  governor.rs  index_seek.rs  session.rs  set_entity.rs  store_source.rs  value_carrier.rs  value_depth.rs
crates/acetone-cypher/tests/snapshots/: error_messages__cypher_diagnostics.snap
crates/acetone-graph/: Cargo.toml
crates/acetone-graph/src/: cell_merge.rs  conflicts.rs  constraints.rs  diff.rs  error.rs  fsck.rs  import.rs  index.rs  lib.rs  lock.rs  merge.rs  migrate.rs  refns.rs  repo.rs
crates/acetone-graph/tests/: at_resolution.rs  blame.rs  cell_merge_integration.proptest-regressions  cell_merge_integration.rs  co_tenant.rs  conflict_resolution.rs  diff_prop.proptest-regressions  diff_prop.rs  edge_symmetry.rs  fsck.rs  gc.rs  import.rs  import_curation_merge.rs  index.rs  index_prop.rs  lifecycle.rs  merge_commit.rs  merge_index_prop.rs  merge_lifecycle.rs  merge_prop.proptest-regressions  merge_prop.rs  merge_regime.proptest-regressions  merge_regime.rs  merge_resolution_validation.rs  merge_validation.rs  merge_wrapper.rs  migrate.rs  referential_integrity.rs  repository.rs
crates/acetone-model/: Cargo.toml
crates/acetone-model/src/: cbor.rs  display.rs  graph_keys.rs  keys.rs  lib.rs  manifest.rs  records.rs  schema.rs  values.rs
crates/acetone-model/tests/: alloc_bounds.rs  golden.rs  map_layouts.proptest-regressions  map_layouts.rs  prolly_maps.rs  properties.proptest-regressions  properties.rs
crates/acetone-prolly/: Cargo.toml
crates/acetone-prolly/src/: chunker.rs  diff.rs  error.rs  lib.rs  merge.rs  node.rs  scan.rs  tree.rs  verify.rs  walk.rs
crates/acetone-prolly/tests/: anchors.rs  corruption.rs  diff_props.rs  git_store.rs  golden.rs  history_independence.proptest-regressions  history_independence.rs  merge_props.rs  pack_on_write.rs  tree_ops.rs  verify.rs
crates/acetone-prolly/tests/common/: mod.rs
crates/acetone-store/: Cargo.toml
crates/acetone-store/src/: consolidate.rs  error.rs  git.rs  hash.rs  lib.rs  pack.rs  store.rs
crates/acetone-store/tests/: chunks.rs  commits.rs  consolidate.rs  interop.rs  refs.rs  tags.rs
crates/acetone-store/tests/common/: mod.rs
docs/: RELEASING.md  acetone-01-design-space.md  acetone-02-spec.md  acetone-03-roadmap.md  conformance.md  user-guide.md
docs/adr/: 0000-template.md  0001-autonomous-working-protocol.md  0002-gate-a-git-odb-as-chunk-store.md  0003-licensing.md  0004-key-value-encoding.md  0005-sprint-demo-phase-boundary-format.md  0006-chunker-boundary-redesign.md  0007-merge-conflict-exclusion.md  0008-map-layouts-and-manifest-encoding.md  0009-subagent-model-tiers.md  0010-workspace-refs-and-writer-lock.md  0011-fsck-finding-taxonomy.md  0011-pack-on-write-consolidation.md  0012-fsck-finding-taxonomy.md  0013-gate-b-parser-adoption.md  0014-per-worktree-workspace-and-lock.md  0015-workspace-chunk-anchoring.md  0016-post-merge-graph-validation.md  0017-procedure-provider-seam.md  0018-diff-virtual-graph-surface.md  0019-blame-first-parent.md  0020-merge-in-progress-state.md  0021-import-plugin-interface.md  0022-indexseek-execution.md  0023-namespace-commit-tree-under-acetone-dir.md  0024-gate-d-format-freeze.md  0025-history-rewrite-migrate-engine.md  0026-acetone-core-facade-and-packaging.md  0027-composite-index-keys.md  0028-referential-integrity-at-the-transaction-boundary.md  0029-preserve-deferred-property-types-on-write-back.md  0030-reject-duplicate-create-edge.md  0031-pre-0.1-spec-drift-corrections.md  0032-roadmap-phases-7-9.md  0033-shell-readline.md  0034-repo-discovery.md  0035-cell-wise-merge.md  0036-query-resource-governor.md  0037-stable-relationship-identity.md  0038-value-domain-carrier.md  (+22 more)
docs/demos/: 0.1.1-deck.html  2026-07-04-phase-0-1-sprint-demo.html  2026-07-04-phase-1-sprint-demo.html  (+9 more)
lab/: Cargo.toml  README.md
lab/src/: lib.rs
lab/tests/: registry.rs
scripts/: bless-public-api.sh  generate-homebrew-formula.sh  phase-5-demo.sh  phase1-e2e.sh
spikes/cypher-parser-spike/: Cargo.toml  README.md
spikes/cypher-parser-spike/src/: lib.rs  queries.rs
spikes/cypher-parser-spike/src/handrolled/: ast.rs  lexer.rs  mod.rs  parser.rs
spikes/cypher-parser-spike/tests/: spike.rs
spikes/prolly-git-spike/: Cargo.toml
spikes/prolly-git-spike/src/: chunker.rs  lib.rs  pack.rs  tree.rs
spikes/prolly-git-spike/tests/: history_independence.rs  spike.rs
tck/: Cargo.toml  README.md
tck/features/: README.md
tck/src/: classify.rs  expected.rs  lib.rs  report.rs  scenario.rs  vocabulary.rs
tck/tests/: control_queries.rs  harness.rs
(+41 files in other folders)
