[workspace]
resolver = "3"
# Throwaway spike code (Phase 0 storage, Phase 2 Gate B parser) is
# deliberately excluded from the workspace so it never gates the main
# build/CI. Run each spike's tests from within its directory.
exclude = ["spikes/prolly-git-spike", "spikes/cypher-parser-spike"]
members = [
    "crates/acetone-store",
    "crates/acetone-prolly",
    "crates/acetone-model",
    "crates/acetone-graph",
    "crates/acetone-cypher",
    "crates/acetone-core",
    "crates/acetone-cli",
    "benches",
    "tck",
    "lab",
]

[profile.release]
# Release artefacts (the single static binary and the published library):
# small and self-contained. `strip` removes symbols; `lto` and a single
# codegen unit trade build time for a smaller, faster binary. Panics keep
# unwinding so error backtraces and library consumers are unaffected.
strip = true
lto = true
codegen-units = 1

[workspace.package]
version = "0.1.1"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
rust-version = "1.96"
repository = "https://github.com/curvelogic/acetone"

[workspace.dependencies]
# gix (gitoxide): the git object database is the v0.1 chunk store (ADR-0002,
# Gate A). >= 0.85 required (RUSTSEC-2025-0140 in older gix-date).
# Feature-minimised: object/ref plumbing only — no network transports, no
# attributes/filters, no `command` support, so gix cannot spawn processes.
gix = { version = "0.85", default-features = false, features = [
    "sha1",
    "sha256",
] }
# bytes: cheaply cloneable, shareable byte buffers for chunk data returned by
# ChunkStore::get — the prolly layer caches and shares chunks without copying.
# MIT, maintained by the tokio team.
bytes = "1"
# tempfile (dev): temporary repositories in tests. MIT/Apache-2.0.
tempfile = "3"
# insta (dev): snapshot testing for user-facing text — Cypher error messages
# and CLI help/failure output — so wording changes surface as reviewable diffs
# (`cargo insta review`) instead of passing silently. Widely used, dual
# MIT/Apache-2.0, dev-only (no runtime footprint); default features only.
insta = "1"

# Version alongside path so the crates are publishable (`cargo publish`
# requires a version on path dependencies).
acetone-store = { path = "crates/acetone-store", version = "0.1.1" }
acetone-prolly = { path = "crates/acetone-prolly", version = "0.1.1" }
acetone-model = { path = "crates/acetone-model", version = "0.1.1" }
acetone-graph = { path = "crates/acetone-graph", version = "0.1.1" }
acetone-cypher = { path = "crates/acetone-cypher", version = "0.1.1" }
acetone-core = { path = "crates/acetone-core", version = "0.1.1" }

# thiserror: standard error-derive for library crates (CLAUDE.md conventions).
thiserror = "2"
# proptest: property testing for encoding/storage invariants (dev-only).
proptest = "1"
# flate2: zlib compression for consolidation pack entries (ADR-0011). Pinned
# to the `zlib-rs` backend gix already pulls, so no second zlib implementation
# enters the tree. MIT/Apache-2.0.
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
# crc32fast: CRC-32 for the v2 pack index (ADR-0011). Already present
# transitively. MIT/Apache-2.0.
crc32fast = "1"
# csv: the de-facto Rust CSV reader (BurntSushi), for the built-in CSV import
# extractor (ADR-0021). Battle-tested, MIT/Unlicense, confined to acetone-cli.
csv = "1"
# serde_json: the de-facto JSON parser, for the built-in JSON/NDJSON import
# extractor (ADR-0021). MIT/Apache-2.0, confined to acetone-cli. Used with its
# own value model only (no serde derives), so no `serde` derive dependency.
serde_json = "1"
# sha2: RustCrypto SHA-256, for the git-object-format-independent
# `Acetone-Source-Hash` import provenance (ADR-0021). MIT/Apache-2.0, confined
# to acetone-cli.
sha2 = "0.10"
