[package]
name = "acetone-cli"
description = "The acetone command-line workbench"
version.workspace = true
publish = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "acetone"
path = "src/main.rs"

[dependencies]
acetone-cypher.workspace = true
acetone-graph.workspace = true
# acetone-model: NodeKey/EdgeKey/NodeRecord/EdgeRecord/Value construction
# for the pre-Cypher plumbing commands (put-node/get-node/put-edge).
acetone-model.workspace = true
# acetone-store: only for the ObjectFormat enum, to plumb `init
# --object-format` through to acetone_graph::InitOptions. Still downward
# per the crate layout (CLAUDE.md), and acetone-cli already depends on
# more than one lower crate.
acetone-store.workspace = true
# anyhow: the one crate in the workspace allowed ad hoc error handling
# (CLAUDE.md) — used only here, to add context to acetone-graph's typed
# errors on the way to a friendly top-level message.
anyhow = "1"
# clap (derive): mature, actively maintained, dual MIT/Apache-2.0 argument
# parser. Justification (CLAUDE.md's dependency rule): this CLI has ten
# subcommands, several with repeated flags (--prop, --trailer) and mixed
# positional/optional arguments; hand-rolling that parsing correctly and
# safely against adversarial input (missing args, unknown flags, malformed
# UTF-8) is exactly the kind of bug class a well-tested, ubiquitous parser
# exists to avoid. No std alternative exists for subcommand parsing.
clap = { version = "4", features = ["derive"] }
# csv / serde_json / sha2: the built-in import format extractors and the
# source-hash provenance (ADR-0021). Confined to the thin client so the core
# crates carry no format-parsing dependencies.
csv.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
