[package]
name = "acetone-cli"
description = "The acetone command-line workbench"
version.workspace = true
publish = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "acetone"
path = "src/main.rs"

[dependencies]
# acetone-core: the single library façade the CLI is a thin client over
# (acetone-ijq). Everything the CLI needs is reached through it —
# `acetone_core::{cypher,graph,model,store}` re-export the constituent crates,
# with the headline types re-exported at the crate root — so the workbench and
# an external library consumer share one product surface (spec §7).
acetone-core.workspace = true
# anyhow: the one crate in the workspace allowed ad hoc error handling
# (CLAUDE.md) — used only here, to add context to acetone-graph's typed
# errors on the way to a friendly top-level message.
anyhow = "1"
# clap (derive): mature, actively maintained, dual MIT/Apache-2.0 argument
# parser. Justification (CLAUDE.md's dependency rule): this CLI has ten
# subcommands, several with repeated flags (--prop, --trailer) and mixed
# positional/optional arguments; hand-rolling that parsing correctly and
# safely against adversarial input (missing args, unknown flags, malformed
# UTF-8) is exactly the kind of bug class a well-tested, ubiquitous parser
# exists to avoid. No std alternative exists for subcommand parsing.
clap = { version = "4", features = ["derive"] }
# csv / serde_json / sha2: the built-in import format extractors and the
# source-hash provenance (ADR-0021). Confined to the thin client so the core
# crates carry no format-parsing dependencies.
csv.workspace = true
serde_json.workspace = true
sha2.workspace = true
# rustyline: line editing, history and arrow-key recall for the interactive
# `acetone shell` REPL (ADR-0033). Mature, MIT-licensed, the conventional Rust
# readline-alike; replaces the hand-rolled stdin loop. Confined to acetone-cli
# — the library crates stay free of it. The non-TTY (piped) path bypasses
# rustyline entirely, keeping the shell scriptable and testable.
rustyline = "15"
# unicode-width: the de-facto Rust implementation of Unicode TR#11 display
# width (MIT/Apache-2.0, tiny). Used only to align the `--format table`
# box-drawing borders correctly for CJK/emoji (2 cells) and combining marks
# (0 cells). Already in the dependency tree transitively (via rustyline), so
# this is a near-zero-cost direct adoption; confined to acetone-cli — the
# library crates stay free of it.
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
