[package]
name = "acetone-cypher"
description = "openCypher front end, binder, planner and iterator-model executor"
version.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
acetone-graph.workspace = true
thiserror.workspace = true

[dev-dependencies]
# proptest: parser fuzzing — no panics on arbitrary input, depth-limit
# behaviour on generated deep nesting.
proptest.workspace = true
