[package]
name = "acetone-cypher"
description = "openCypher front end, binder, planner and iterator-model executor"
version.workspace = true
publish = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# acetone-model: the binder's catalogue is built from schema-map entries
# (LabelDef, RelTypeDef, IndexDef). Downward dependency per crate layout.
acetone-model.workspace = true
acetone-graph.workspace = true
thiserror.workspace = true

[dev-dependencies]
# proptest: parser fuzzing — no panics on arbitrary input, depth-limit
# behaviour on generated deep nesting.
proptest.workspace = true
# insta: snapshot the rendered text of parser/binder diagnostics so message
# improvements land as reviewed diffs rather than silent changes.
insta.workspace = true
# tempfile: a temporary on-disk repository for the value-carrier round-trip
# integration test, which drives the real write path (execute → persist →
# save → re-read) that the in-crate `GraphSource` tests cannot.
tempfile.workspace = true
