[package]
name = "acetone-model"
description = "Node/edge keys, records, order-preserving encodings, schema and manifest"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
acetone-prolly.workspace = true
thiserror.workspace = true

[dev-dependencies]
# proptest: round-trip, ordering and canonicity properties over the
# normative encodings (Load-Bearing Invariant 2).
proptest.workspace = true
