[package]
name = "acetone-store"
description = "ChunkStore trait and git object database backend; refs and commits"
version.workspace = true
publish.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gix.workspace = true
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
