# THROWAWAY SPIKE (bead acetone-28x.2) — excluded from the acetone workspace.
# A prolly map over the git object database, to de-risk Decision 1 Option A
# (git ODB as chunk store). Not production code; feeds Phase 0 benchmarks
# (acetone-28x.4) and the history-independence property tests (acetone-28x.5).
# Empty workspace table: this package is workspace-excluded at the root, and
# this keeps cargo from adopting an enclosing workspace when the repo is
# checked out nested inside another tree (e.g. a git worktree).
[workspace]

[package]
name = "prolly-git-spike"
version = "0.0.1"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
# gix (gitoxide): the whole point of the spike is to exercise the gitoxide
# write path (blobs, trees, commits, refs). Dual MIT/Apache-2.0, actively
# maintained (Byron/gitoxide). git2 fallback only if a gix write path is
# missing — none needed so far; see PR body.
gix = "0.85"
# thiserror: standard error-derive used across acetone library crates.
thiserror = "2"
# flate2 with the zlib-rs backend: zlib streams for hand-written pack
# entries (bead acetone-63m.10). zlib-rs is already in the tree via
# gix-features; this adds only the flate2 facade. MIT/Apache-2.0.
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
# crc32fast: per-object CRCs for hand-written pack indexes (same bead).
# Already in the tree via zlib-rs's ecosystem; MIT/Apache-2.0.
crc32fast = "1"

[dev-dependencies]
# tempfile: temporary bare repositories for tests. MIT/Apache-2.0.
tempfile = "3"
# proptest: property testing for the history-independence suite
# (acetone-28x.5) — the same engine the acetone workspace will use for its
# normative invariant tests. Dual MIT/Apache-2.0, actively maintained
# (proptest-rs). Dev-only, spike-only (workspace-excluded).
proptest = "1"

[profile.release]
debug = true
